; ModuleID = '/home/carl/AnghaBench/libgit2/tests/refs/extr_peel.c_assert_peel_error.c'
source_filename = "/home/carl/AnghaBench/libgit2/tests/refs/extr_peel.c_assert_peel_error.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@g_repo = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32, i8*, i32)* @assert_peel_error to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @assert_peel_error(i32 %0, i8* %1, i32 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i8*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32*, align 8
  %8 = alloca i32*, align 8
  store i32 %0, i32* %4, align 4
  store i8* %1, i8** %5, align 8
  store i32 %2, i32* %6, align 4
  %9 = load i32, i32* @g_repo, align 4
  %10 = load i8*, i8** %5, align 8
  %11 = call i32 @git_reference_lookup(i32** %7, i32 %9, i8* %10)
  %12 = call i32 @cl_git_pass(i32 %11)
  %13 = load i32, i32* %4, align 4
  %14 = load i32*, i32** %7, align 8
  %15 = load i32, i32* %6, align 4
  %16 = call i32 @git_reference_peel(i32** %8, i32* %14, i32 %15)
  %17 = call i32 @cl_assert_equal_i(i32 %13, i32 %16)
  %18 = load i32*, i32** %7, align 8
  %19 = call i32 @git_reference_free(i32* %18)
  ret void
}

declare dso_local i32 @cl_git_pass(i32) #1

declare dso_local i32 @git_reference_lookup(i32**, i32, i8*) #1

declare dso_local i32 @cl_assert_equal_i(i32, i32) #1

declare dso_local i32 @git_reference_peel(i32**, i32*, i32) #1

declare dso_local i32 @git_reference_free(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
